<resources>
    <string name="app_name">InYourHead2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_note">Сохранить</string>
    <string name="description_editText">Description</string>
    <string name="title_editText">Title</string>
    <string name="delete_note_button">Удалить</string>
    <string name="change_note_button">Изменить</string>
</resources>