<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/title_details_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_editText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/description_details_editTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_editText"
            android:textSize="25sp" />

    </LinearLayout>

    <Button
        android:id="@+id/delete_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_note_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/change_note_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/change_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_note_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_note_button" />

</androidx.constraintlayout.widget.ConstraintLayout>